solved nav problems

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,12 @@
 ---
 title: Home | iMath
 layout: base.html
+style: css/index.css
+logo: img/logo.png
+headerScript: js/header.js
 ---
 
-
-<div>
-    <h1>home</h1>
-</div>
+     <div>
+        <h1>home</h1>
+    </div>
+        
