finished brickbreaker and rain

--- a/src/games/brickbreaker.html
+++ b/src/games/brickbreaker.html
@@ -6,6 +6,12 @@ logo: ../../img/logo.png
 headerScript: ../../js/header.js
 ---
 
-<div>
-    <h1>brickbreaker</h1>
+<div class="container">
+    <div class="wrapper content">
+        <h1>Brickbreaker</h1>
+        <div class="canvas">
+            <canvas width="800" height="800" id="canvas"></canvas>
+        </div>
+        <script src="../../js/games/brickbreaker.js"></script>
+    </div>
 </div>
