--- a/src/javascript/rain.html
+++ b/src/javascript/rain.html
@@ -7,7 +7,7 @@ headerScript: ../../js/header.js
 ---
 <div class="container">
     <div class="wrapper content">
-        <h1>rain</h1>
+        <h1>Raindrups</h1>
         <div class="canvas">
             <canvas width="800" height="600" id="canvas"></canvas>
         </div>
