--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,34 @@ logo: img/logo.png
 headerScript: js/header.js
 ---
 
-     <div>
-        <h1>home</h1>
-    </div>
+<div class="banner">
+    <div class="wrapper content">
+        <h1>Welcome to iMath.tech</h1>
         
+    </div>
+</div>
+<div class="guides">
+    <div class="wrapper sectioncontent">
+        <img src="" alt="">
+        <section class="text">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, vero qui sint voluptas distinctio dolor hic corporis a vel accusamus.</p>
+        </section>
+    </div>
+</div>
+<div class="projects">
+    <div class="wrapper sectioncontent">
+        <img src="" alt="">
+        <section class="text">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, temporibus!</p>
+        </section>
+    </div>
+</div>
+<div class="games">
+
+</div>
+<div class="javascript">
+
+</div>
+<div class="info">
+
+</div>
