--- a/src/games/brickbreaker.html
+++ b/src/games/brickbreaker.html
@@ -9,6 +9,7 @@ headerScript: ../../js/header.js
 <div class="container">
     <div class="wrapper content">
         <h1>Brickbreaker</h1>
+        <p>Press space to start</p>
         <div class="canvas">
             <canvas width="800" height="800" id="canvas"></canvas>
         </div>
