updated backupscript styling

--- a/src/guides/backupscript.html
+++ b/src/guides/backupscript.html
@@ -36,12 +36,18 @@ headerScript: ../../js/header.js
             <div class="content">
                 <div class="text">
                     <p>After saving the file it is time to code the program. In the next image you can see the code. I will try to explain everything.</p>
-                    <p>Line 1: this will hide the commands in the cmd (not necessary).</p>
-                    <p>Line 2: this will set the output color in the cmd to green (not necessary).</p>
-                    <p>Line 3: this will set the title of your cmd (not necessary).</p>
-                    <p>Line 4 and 5: this creates a variable called 'name' and stores the Minecraft world name and the current date. Change 'WORLDNAME' to the name of your Minecraft world.</p>
-                    <p>Line 6: this will copy the world files to your destination. You need to copy this path. Change 'USERNAME' to your computer username. Change '4ever' to the name of your world. The second path is your destination. You can change this to whatever you like. You just have to keep '\%name%' on the end of the path. </p>
-                    <p>Line 7: this will add a pause on the end of the script so you can see the result.</p>
+                    <br>
+                    <p><b>Line 1:</b> this will hide the commands in the cmd (not necessary).</p>
+                    <br>
+                    <p><b>Line 2:</b> this will set the output color in the cmd to green (not necessary).</p>
+                    <br>
+                    <p><b>Line 3:</b> this will set the title of your cmd (not necessary).</p>
+                    <br>
+                    <p><b>Line 4 and 5:</b> this creates a variable called 'name' and stores the Minecraft world name and the current date. Change 'WORLDNAME' to the name of your Minecraft world.</p>
+                    <br>
+                    <p><b>Line 6:</b> this will copy the world files to your destination. You need to copy this path. Change 'USERNAME' to your computer username. Change '4ever' to the name of your world. The second path is your destination. You can change this to whatever you like. You just have to keep '\%name%' on the end of the path. </p>
+                    <br>
+                    <p><b>Line 7:</b> this will add a pause on the end of the script so you can see the result.</p>
                 </div>
                 <img src="../../img/guides/autobackup/codebackup.PNG" alt="The code" id="code">
             </div>
@@ -53,12 +59,10 @@ headerScript: ../../js/header.js
         <div class="wrapper">
             <h2>Running</h2>
             <div class="content">
-                <div class="img">
-                    <img src="../../img/guides/autobackup/demo.PNG" alt="Demo" id="demo">
-                    <img src="../../img/guides/autobackup/result.PNG" alt="The result" id="result">
-                </div>
+                <img src="../../img/guides/autobackup/demo.gif" alt="Demo" id="demo">    
                 <div class="text">
                     <p>Your program is ready to run. When you run the program it wil ask you to specify a file or destination. Just press 'D' from directory.</p>
+                    <br>
                     <p>Your program will run and these are the results.</p>
                 </div>
             </div>
