--- a/src/info/setup.html
+++ b/src/info/setup.html
@@ -6,6 +6,189 @@ logo: ../../img/logo.png
 headerScript: ../../js/header.js
 ---
 
-    <div>
-        <h1>setup</h1>
+    <div class="container">
+        <div class="focus">
+            <div class="wrapper content">
+                <h1>My setup</h1>
+                <section>
+                    <h2>My focus</h2>
+                    <p>I wanted to build a setup specially made for gaming, webdevelopment and programming (apps, scripts,...). My first focus was performance over looks but after building I decided to add more rgb to the build without compromising the performance.</p>
+                </section>
+            </div>
+        </div>
+        <div class="slideshow swiper-container">
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/1.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/2.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/3.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/4.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/5.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/6.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/7.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/8.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/9.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/10.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/11.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/12.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/13.jpg" alt="my setup">
+                </div>
+                <div class="swiper-slide content">
+                    <img src="../../img/setup/14.jpg" alt="my setup">
+                </div>
+            </div>
+        </div>
+        <div class="mainSystem">
+            <div class="wrapper">
+                <h2>System info</h2>
+                <div class="table">
+                    <table>
+                        <tr>
+                            <th class="what">What</th>
+                            <th class="name">Name</th>
+                        </tr>
+                        <tr>
+                            <td class="one">Case</td>
+                            <td class="two"><a href="https://www.alternate.be/Sharkoon/TG5-RGB-tower-behuizing/html/product/1340505?">Sharkoon TG5 RGB ATX</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Motherboard</td>
+                            <td class="two"><a href="https://tweakers.net/pricewatch/701531/asus-rog-maximus-ix-hero.html">Asus MAXIMUS IX HERO Z270</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">CPU</td>
+                            <td class="two"><a href="https://www.alternate.be/Intel(R)/Core-i7-7700K-4-2-GHz-(4-5-GHz-Turbo-Boost)-socket-1151-processor/html/product/1305350?">Intel Core i7-7700K 4200 1151 BOX</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">CPU cooler</td>
+                            <td class="two"><a href="https://tweakers.net/pricewatch/365854/be-quiet!-dark-rock-3.html">be quiet! Dark Rock 3</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Graphics card</td>
+                            <td class="two"><a href="https://www.alternate.be/GIGABYTE/Geforce-GTX-1070-Ti-Gaming-8G-grafische-kaart/html/product/1434950?">GiBy8GB D5 GTX 1070 Ti Gaming 8G</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Memory (x2)</td>
+                            <td class="two"><a href="https://www.alternate.be/G-Skill/16-GB-DDR4-3200-Kit-werkgeheugen/html/product/1327190?">D416GB 3200-16 Trident Z RGB K2 GSK</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Network card</td>
+                            <td class="two"><a href="https://www.bol.com/nl/p/asus-pce-ac88-netwerkkaart/9200000061370971/">ASUS PCE-AC88</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Power supply</td>
+                            <td class="two"><a href="https://www.alternate.be/be-quiet!/Power-Zone-750W-750-Watt-voeding/html/product/1096013?">be quiet! POWERZONE 750W ATX23</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">SSD M.2</td>
+                            <td class="two"><a href="https://www.alternate.be/Samsung/250-GB-970-EVO-SSD/html/product/1449393?">SSD 250GB 1.5/3.4G 970 EVO PCIe M.2 SAM</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">SSD</td>
+                            <td class="two"><a href="https://www.alternate.be/Samsung/860-EVO-500-GB-SSD/html/product/1405518?">SSD 500GB 530/550 860 EVOBasic SA3 SAM</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">HDD</td>
+                            <td class="two"><a href="https://tweakers.net/pricewatch/297054/seagate-desktop-hdd-1tb.html">Seag 1TB ST1000DM003 7200 SA3</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Operating system</td>
+                            <td class="two"><a href="https://www.alternate.be/Microsoft/Windows-10-Home-64bit-software/html/product/1213101?">MS Windows 10 64bit NL</a></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="customization">
+            <div class="wrapper">
+                <h2>System customization</h2>
+                <div class="table">
+                    <table>
+                        <tr>
+                            <th class="what">What</th>
+                            <th class="name">Name</th>
+                        </tr>
+                        <tr>
+                            <td class="one">Rgb hub</td>
+                            <td class="two"><a href="https://www.alternate.be/Corsair/Commander-PRO-fancontroller/html/product/1353381?">Corsair commander pro</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Rgb led strips</td>
+                            <td class="two"><a href="https://www.alternate.be/Corsair/RGB-LED-Lighting-PRO-ExpansionKit-led-strip/html/product/1376664?">Corsair RGB LED lighting pro</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Rgb fans</td>
+                            <td class="two"><a href="https://www.alternate.be/Corsair/LL120-RGB-LED-PWM-fan-3-Fan-Pack-case-fan/html/product/1388597?">Corsair LL120 3x RGB led</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Rgb fans expansion</td>
+                            <td class="two"><a href="https://www.alternate.be/Corsair/LL120-RGB-LED-PWM-fan-Single-Pack-case-fan/html/product/1388598?">Corsair LL120 RGB LED</a></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="peripherals">
+            <div class="wrapper">
+                <h2>Peripherals</h2>
+                <div class="table">
+                    <table>
+                        <tr>
+                            <th class="what">What</th>
+                            <th class="name">Name</th>
+                        </tr>
+                        <tr>
+                            <td class="one">Mouse</td>
+                            <td class="two"><a href="https://www.coolblue.be/nl/product/628079/razer-mamba-tournament-edition.html">Razer Mamba Tournament Edition</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Mousepad</td>
+                            <td class="two"><a href="https://www.coolblue.be/nl/product/815420/razer-goliathus-chroma-soft-extended.html">Razer Goliathus Chroma Soft Extended</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Keyboard</td>
+                            <td class="two"><a href="https://azerty.nl/product/razer/931444/blackwidow-x-chroma-toetsenbord-usb?gclid=CjwKCAjwk9HWBRApEiwA6mKWaSAbPK80-8hUG5OjyC801SwXMS2dOdUIUR4_XZSNXgTM-KWbDKNRHRoCHZoQAvD_BwE">Razer BLACKWIDOW x chroma</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Headset</td>
+                            <td class="two"><a href="https://www.bol.com/nl/p/razer-kraken-7-1-chroma-v2-oval-ear-gaming-headset-ps4-windows-mac-zwart/9200000078486295/?country=BE">Razer Kraken 7.1 Chroma V2 Oval</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Macro keys</td>
+                            <td class="two"><a href="https://www.coolblue.be/nl/product/772769/elgato-stream-deck.html">Elgato Stream deck</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">Wireless phone charger</td>
+                            <td class="two"><a href="https://www.razer.com/mobile/razer-phone-2-wireless-charger">Razer Phone 2 Wireless Charger</a></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="../../js/setup/swiper.js"></script>
