--- a/src/info/setup.html
+++ b/src/info/setup.html
@@ -9,14 +9,20 @@ headerScript: ../../js/header.js
     <div class="container">
         <div class="focus">
             <div class="wrapper content">
-                <h1>My setup</h1>
-                <section>
-                    <h2>My focus</h2>
-                    <p>I wanted to build a setup specially made for gaming, webdevelopment and programming (apps, scripts,...). My first focus was performance over looks but after building I decided to add more rgb to the build without compromising the performance.</p>
-                </section>
+                <div>
+                    <section class="text">
+                        <h1>My setup</h1>
+                        <h2>My focus</h2>
+                        <p>I wanted to build a setup specially made for gaming, webdevelopment and programming (apps, scripts,...). My first focus was performance over looks but after building I decided to add more rgb to the build without compromising the performance.</p>
+                    </section>
+                    <section class="img">
+                        <img src="../../img/setup/eastwood-come-back-later.png" alt="A cartoon about a boy sleeping on a desk">
+                    </section>
+                </div>
             </div>
         </div>
         <div class="slideshow swiper-container">
+            <h2>My setup</h2>
             <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide content">
@@ -63,10 +69,11 @@ headerScript: ../../js/header.js
                 </div>
             </div>
         </div>
-        <div class="mainSystem">
+        <div class="mainSystem section">
             <div class="wrapper">
                 <h2>System info</h2>
-                <div class="table">
+                <div class="content">
+                    <div class="table">
                     <table>
                         <tr>
                             <th class="what">What</th>
@@ -74,23 +81,23 @@ headerScript: ../../js/header.js
                         </tr>
                         <tr>
                             <td class="one">Case</td>
-                            <td class="two"><a href="https://www.alternate.be/Sharkoon/TG5-RGB-tower-behuizing/html/product/1340505?">Sharkoon TG5 RGB ATX</a></td>
+                            <td class="two"><a href="https://tweakers.net/pricewatch/1430330/lian-li-pc-o11d-razer-edition.html">Lian Li PC-O11D Razer Edition</a></td>
                         </tr>
                         <tr>
                             <td class="one">Motherboard</td>
-                            <td class="two"><a href="https://tweakers.net/pricewatch/701531/asus-rog-maximus-ix-hero.html">Asus MAXIMUS IX HERO Z270</a></td>
+                            <td class="two"><a href="https://www.alternate.be/ASUS/ROG-Maximus-XI-Hero-socket-1151-moederbord/html/product/1486967?">ASUS ROG Maximus XI Hero</a></td>
                         </tr>
                         <tr>
                             <td class="one">CPU</td>
-                            <td class="two"><a href="https://www.alternate.be/Intel(R)/Core-i7-7700K-4-2-GHz-(4-5-GHz-Turbo-Boost)-socket-1151-processor/html/product/1305350?">Intel Core i7-7700K 4200 1151 BOX</a></td>
+                            <td class="two"><a href="https://www.alternate.be/Intel/Core-i9-9900K-3-6-GHz-(5-0-GHz-Turbo-Boost)-socket-1151-processor/html/product/1477122?">Intel Core i9-9900K</a></td>
                         </tr>
                         <tr>
                             <td class="one">CPU cooler</td>
-                            <td class="two"><a href="https://tweakers.net/pricewatch/365854/be-quiet!-dark-rock-3.html">be quiet! Dark Rock 3</a></td>
+                            <td class="two"><a href="https://www.alternate.be/Corsair/Hydro-Series-H100i-RGB-PLATINUM-waterkoeling/html/product/1491405?">Corsair Hydro Series H100i RGB PLATINUM</a></td>
                         </tr>
                         <tr>
                             <td class="one">Graphics card</td>
-                            <td class="two"><a href="https://www.alternate.be/GIGABYTE/Geforce-GTX-1070-Ti-Gaming-8G-grafische-kaart/html/product/1434950?">GiBy8GB D5 GTX 1070 Ti Gaming 8G</a></td>
+                            <td class="two"><a href="https://www.alternate.be/GIGABYTE/GeForce-RTX-2080-SUPER-GAMING-OC-8G-V2-grafische-kaart/html/product/1573722?">GIGABYTE GeForce RTX 2080 SUPER GAMING OC 8G V2</a></td>
                         </tr>
                         <tr>
                             <td class="one">Memory (x2)</td>
@@ -105,88 +112,118 @@ headerScript: ../../js/header.js
                             <td class="two"><a href="https://www.alternate.be/be-quiet!/Power-Zone-750W-750-Watt-voeding/html/product/1096013?">be quiet! POWERZONE 750W ATX23</a></td>
                         </tr>
                         <tr>
-                            <td class="one">SSD M.2</td>
+                            <td class="one">SSD M.2 (boot drive)</td>
                             <td class="two"><a href="https://www.alternate.be/Samsung/250-GB-970-EVO-SSD/html/product/1449393?">SSD 250GB 1.5/3.4G 970 EVO PCIe M.2 SAM</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">SSD M.2 (games drive)</td>
+                            <td class="two"><a href="https://www.alternate.be/Samsung/970-EVO-Plus-1-TB-SSD/html/product/1509921?">Samsung 970 EVO Plus, 1 TB SSD</a></td>
                         </tr>
                         <tr>
                             <td class="one">SSD</td>
                             <td class="two"><a href="https://www.alternate.be/Samsung/860-EVO-500-GB-SSD/html/product/1405518?">SSD 500GB 530/550 860 EVOBasic SA3 SAM</a></td>
                         </tr>
                         <tr>
-                            <td class="one">HDD</td>
+                            <td class="one">HDD 1</td>
                             <td class="two"><a href="https://tweakers.net/pricewatch/297054/seagate-desktop-hdd-1tb.html">Seag 1TB ST1000DM003 7200 SA3</a></td>
+                        </tr>
+                        <tr>
+                            <td class="one">HDD 2</td>
+                            <td class="two"><a href="https://www.alternate.be/WD/Black-6-TB-Harde-schijf/html/product/1445175?">WD Black, 6 TB</a></td>
                         </tr>
                         <tr>
                             <td class="one">Operating system</td>
                             <td class="two"><a href="https://www.alternate.be/Microsoft/Windows-10-Home-64bit-software/html/product/1213101?">MS Windows 10 64bit NL</a></td>
                         </tr>
                     </table>
+                    </div>
+                    <div class="img">
+                        <img src="../../img/setup/mirage-come-back-later.png" alt="A cartoon with a robot and a computer">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="customization">
+        <div class="customization section">
             <div class="wrapper">
                 <h2>System customization</h2>
-                <div class="table">
-                    <table>
-                        <tr>
-                            <th class="what">What</th>
-                            <th class="name">Name</th>
-                        </tr>
-                        <tr>
-                            <td class="one">Rgb hub</td>
-                            <td class="two"><a href="https://www.alternate.be/Corsair/Commander-PRO-fancontroller/html/product/1353381?">Corsair commander pro</a></td>
-                        </tr>
-                        <tr>
-                            <td class="one">Rgb led strips</td>
-                            <td class="two"><a href="https://www.alternate.be/Corsair/RGB-LED-Lighting-PRO-ExpansionKit-led-strip/html/product/1376664?">Corsair RGB LED lighting pro</a></td>
-                        </tr>
-                        <tr>
-                            <td class="one">Rgb fans</td>
-                            <td class="two"><a href="https://www.alternate.be/Corsair/LL120-RGB-LED-PWM-fan-3-Fan-Pack-case-fan/html/product/1388597?">Corsair LL120 3x RGB led</a></td>
-                        </tr>
-                        <tr>
-                            <td class="one">Rgb fans expansion</td>
-                            <td class="two"><a href="https://www.alternate.be/Corsair/LL120-RGB-LED-PWM-fan-Single-Pack-case-fan/html/product/1388598?">Corsair LL120 RGB LED</a></td>
-                        </tr>
-                    </table>
+                <div class="content">
+                    <div class="img">
+                        <img src="../../img/setup/mirage-delivery.png" alt="A cartoon about a robot with boxes that he is carrying">
+                    </div>
+                    <div class="table">
+                        <table>
+                            <tr>
+                                <th class="what">What</th>
+                                <th class="name">Name</th>
+                            </tr>
+                            <tr>
+                                <td class="one">Rgb hub</td>
+                                <td class="two"><a href="https://www.alternate.be/Corsair/Commander-PRO-fancontroller/html/product/1353381?">Corsair commander pro</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Rgb led strips</td>
+                                <td class="two"><a href="https://www.alternate.be/Corsair/RGB-LED-Lighting-PRO-ExpansionKit-led-strip/html/product/1376664?">Corsair RGB LED lighting pro</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Rgb fans</td>
+                                <td class="two"><a href="https://www.alternate.be/Corsair/LL120-RGB-LED-PWM-fan-3-Fan-Pack-case-fan/html/product/1388597?">Corsair LL120 3x RGB led</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Rgb fans expansion</td>
+                                <td class="two"><a href="https://www.alternate.be/Corsair/LL120-RGB-LED-PWM-fan-Single-Pack-case-fan/html/product/1388598?">Corsair LL120 RGB LED</a></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="peripherals">
+        <div class="peripherals section">
             <div class="wrapper">
                 <h2>Peripherals</h2>
-                <div class="table">
-                    <table>
-                        <tr>
-                            <th class="what">What</th>
-                            <th class="name">Name</th>
-                        </tr>
-                        <tr>
-                            <td class="one">Mouse</td>
-                            <td class="two"><a href="https://www.coolblue.be/nl/product/628079/razer-mamba-tournament-edition.html">Razer Mamba Tournament Edition</a></td>
-                        </tr>
-                        <tr>
-                            <td class="one">Mousepad</td>
-                            <td class="two"><a href="https://www.coolblue.be/nl/product/815420/razer-goliathus-chroma-soft-extended.html">Razer Goliathus Chroma Soft Extended</a></td>
-                        </tr>
-                        <tr>
-                            <td class="one">Keyboard</td>
-                            <td class="two"><a href="https://azerty.nl/product/razer/931444/blackwidow-x-chroma-toetsenbord-usb?gclid=CjwKCAjwk9HWBRApEiwA6mKWaSAbPK80-8hUG5OjyC801SwXMS2dOdUIUR4_XZSNXgTM-KWbDKNRHRoCHZoQAvD_BwE">Razer BLACKWIDOW x chroma</a></td>
-                        </tr>
-                        <tr>
-                            <td class="one">Headset</td>
-                            <td class="two"><a href="https://www.bol.com/nl/p/razer-kraken-7-1-chroma-v2-oval-ear-gaming-headset-ps4-windows-mac-zwart/9200000078486295/?country=BE">Razer Kraken 7.1 Chroma V2 Oval</a></td>
-                        </tr>
-                        <tr>
-                            <td class="one">Macro keys</td>
-                            <td class="two"><a href="https://www.coolblue.be/nl/product/772769/elgato-stream-deck.html">Elgato Stream deck</a></td>
-                        </tr>
-                        <tr>
-                            <td class="one">Wireless phone charger</td>
-                            <td class="two"><a href="https://www.razer.com/mobile/razer-phone-2-wireless-charger">Razer Phone 2 Wireless Charger</a></td>
-                        </tr>
-                    </table>
+                <div class="content">
+                    <div class="table">
+                        <table>
+                            <tr>
+                                <th class="what">What</th>
+                                <th class="name">Name</th>
+                            </tr>
+                            <tr>
+                                <td class="one">Mouse</td>
+                                <td class="two"><a href="https://www.coolblue.be/nl/product/628079/razer-mamba-tournament-edition.html">Razer Mamba Tournament Edition</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Mousepad</td>
+                                <td class="two"><a href="https://www.coolblue.be/nl/product/815420/razer-goliathus-chroma-soft-extended.html">Razer Goliathus Chroma Soft Extended</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Keyboard</td>
+                                <td class="two"><a href="https://www.alternate.be/Razer/Huntsman-Elite-gaming-toetsenbord/html/product/1465840?">Razer Huntsman Elite gaming toetsenbord</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Monitor (main)</td>
+                                <td class="two"><a href="https://www.coolblue.be/nl/product/836848/samsung-lc27rg50fquxen.html">Samsung LC27RG50FQUXEN</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Monitor (2 & 3)</td>
+                                <td class="two"><a href="https://www.coolblue.be/nl/product/826395/asus-vg278qr.html?cmt=c_a%2Ccid_8785902850%2Caid_88284772963%2Ctid_aud-674768234530%3Apla-318740327496%2Cgn_g%2Cd_c&gclid=Cj0KCQjwwr32BRD4ARIsAAJNf_2j7zjAnr-I2SNi9qfR_72Lj8a73QdD7DheJRiqM7KnnhCulHhQRKEaAirxEALw_wcB">Asus VG278QR</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Headset</td>
+                                <td class="two"><a href="https://www.bol.com/nl/p/razer-kraken-7-1-chroma-v2-oval-ear-gaming-headset-ps4-windows-mac-zwart/9200000078486295/?country=BE">Razer Kraken 7.1 Chroma V2 Oval</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Macro keys</td>
+                                <td class="two"><a href="https://www.coolblue.be/nl/product/772769/elgato-stream-deck.html">Elgato Stream deck</a></td>
+                            </tr>
+                            <tr>
+                                <td class="one">Wireless phone charger</td>
+                                <td class="two"><a href="https://www.razer.com/mobile/razer-phone-2-wireless-charger">Razer Phone 2 Wireless Charger</a></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="img">
+                        <img src="../../img/setup/virtual-reality.png" alt="A cartoon about a man playing with virtual reality">
+                    </div>
                 </div>
             </div>
         </div>
