added and styled home, finished up backupscript page styling

--- a/src/guides/backupscript.html
+++ b/src/guides/backupscript.html
@@ -10,11 +10,16 @@ headerScript: ../../js/header.js
     <div class="examples">
         <div class="wrapper content">
             <h1>Auto backup program</h1>
-            <section>
-                <h2>Some examples</h2>
-                <p>This script can be used to make backups of almost everything such as your music collection, your photos, important files that you update on a regular basis or even gamesaves.</p>
-                <p>Today I will show you how to write this script and use it for a Minecraft world.</p>
-            </section>
+            <div>
+                <section class="text">
+                    <h2>Some examples</h2>
+                    <p>This script can be used to make backups of almost everything such as your music collection, your photos, important files that you update on a regular basis or even gamesaves.</p>
+                    <p>Today I will show you how to write this script and use it for a Minecraft world.</p>
+                </section>
+                <section class="img">
+                    <img src="../../img/guides/autobackup/hugo-uploading.png" alt="">
+                </section>
+            </div>
         </div>
     </div>
     <div class="setup">
