--- a/src/index.html
+++ b/src/index.html
@@ -6,34 +6,18 @@ logo: img/logo.png
 headerScript: js/header.js
 ---
 
-<div class="banner">
-    <div class="wrapper content">
-        <h1>Welcome to iMath.tech</h1>
-        
+<div class="container">
+    <div class="welcome">
+        <div class="wrapper content">
+            <div>
+                <section class="text">
+                    <h1>Welcome to iMath.tech</h1>
+                    <p>iMath.tech is a blog about technology where you can find projects I worked on or I'm working on right now. I also have some guides for you. You can play games here written in javascript or in unity. There are also javascript programs where I do some visual or functional experimentation. More detailed info can be found <a href="/info/generalinfo">here</a>.</p>
+                </section>
+                <section class="img">
+                    <img src="../../img/home/flame-welcome.png" alt="">
+                </section>
+            </div>
+        </div>
     </div>
-</div>
-<div class="guides">
-    <div class="wrapper sectioncontent">
-        <img src="" alt="">
-        <section class="text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, vero qui sint voluptas distinctio dolor hic corporis a vel accusamus.</p>
-        </section>
-    </div>
-</div>
-<div class="projects">
-    <div class="wrapper sectioncontent">
-        <img src="" alt="">
-        <section class="text">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, temporibus!</p>
-        </section>
-    </div>
-</div>
-<div class="games">
-
-</div>
-<div class="javascript">
-
-</div>
-<div class="info">
-
 </div>
