--- a/src/index.html
+++ b/src/index.html
@@ -20,4 +20,61 @@ headerScript: js/header.js
             </div>
         </div>
     </div>
+    <div class="myself">
+        <div class="wrapper content">
+            <div>
+                <section class="img">
+                    <img src="../../img/info/eastwood-success.png" alt="">
+                </section>
+                <section class="text">
+                    <h2>Who am I?</h2>
+                    <p>My name is Mathias Camus and I am what you would call a "nerd". I build websites, computers, scripts and I solve problems, or at least I try to solve them. I was born with a disablity and I want to show that being disabled isn't something that will hold you back if you're really passionate about something.</p>
+                </section>
+            </div>
+        </div>
+    </div>
+    <div class="what">
+        <div class="what-content">
+            <div class="wrapper">
+                <h2>What can I find on this Website?</h2>
+            </div>
+        </div>
+        <div class="guides section">
+            <div class="wrapper">
+                <h3>Guides</h3>
+                <div class="content">
+                    <p>You can find tutorials about lots of things, for example making a great looking desktop like I did in the picture below. You can also find scripts or little programs coded by me that could make your life easier. For example a script that can make automatic backups of files you regularly update.</p>
+                    <img src="../../img/info/desktop.png" alt="My desktop view">
+                </div>
+            </div>
+        </div>
+        <div class="projects section">
+            <div class="wrapper">
+                <h3>Projects</h3>
+                <div class="content">
+                    <img src="../../img/info/pluto-artist-workspace.png" alt="A cartoon about a workspace">
+                    <p>You can also keep track of my projects that I have worked on or that I'm working on at the moment. For example automating with Google home or with IFTTT. I'm also planning on making a smart mirror.</p>
+                </div>
+                
+            </div>
+        </div>
+        <div class="games section">
+            <div class="wrapper">
+                <h3>Games</h3>
+                <div class="content">
+                    <p>I also make games. I do this in javascript with the html5 canvas or I do it in unity with c#. Currently I have only 1 game but I'm working on more.</p>
+                    <img src="../../img/info/brickbreaker.jpg" alt="Brickbreaker game">
+                </div>
+            </div>
+        </div>
+        <div class="javascript section">
+            <div class="wrapper">
+                <h3>Javascript programs</h3>
+                <div class="content">
+                    <img src="../../img/info/rain.jpg" alt="Raindrups">
+                    <p>Sometimes I like to make little programs in javascript. These can be something visual or something functional. Raindrups or a simple timer for example.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
