--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@ headerScript: js/header.js
             <div>
                 <section class="text">
                     <h1>Welcome to iMath.tech</h1>
-                    <p>iMath.tech is a blog about technology where you can find projects I worked on or I'm working on right now. I also have some guides for you. You can play games here written in javascript or in unity. There are also javascript programs where I do some visual or functional experimentation. More detailed info can be found <a href="/info/generalinfo">here</a>.</p>
+                    <p>iMath.tech is a blog about technology where you can find projects I worked on or I'm working on right now. I also have some guides for you. You can play games here written in javascript or in unity. There are also javascript programs where I do some visual or functional experimentation.</p>
                 </section>
                 <section class="img">
                     <img src="../../img/home/flame-welcome.png" alt="">
